--- a/CSS_advanced/styles/20-style.css
+++ b/CSS_advanced/styles/20-style.css
@@ -165,22 +165,23 @@ ul.row {
     list-style: none;
 }
 
-.row:after {
+.row::after {
     content: "";
     display: table;
     clear: both;
 }
 
-.col-1-3 {
-    width: 33.33%;
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
 }
 
+.col-1-3 {
+    width: 33.33%;
+}
+
 .col-1-2 {
     width: 50%;
-    float: left;
-    padding: 0.5rem;
 }
 
 .footer-copyright {
